--- a/Tetris-PLP.cabal
+++ b/Tetris-PLP.cabal
@@ -35,7 +35,7 @@ license:            BSD-2-Clause
 license-file:       LICENSE
 
 -- The package author(s).
-author:             Lucas Emanuel
+author:             Lucas Emanuel, Julio Hsu
 
 -- An email address to which users can send suggestions, bug reports, and patches.
 maintainer:         lucascgmatos@gmail.com
