--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
+dist
+dist-*
+dist-newstyle/
+cabal-dev
+*.exe
+*.o
+*.hi
+*.hie
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
 learning/
-.exe
-.hi
-.o
