--- a/Tetris-PLP.cabal
+++ b/Tetris-PLP.cabal
@@ -62,7 +62,7 @@ executable Tetris-PLP
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: MatrixController, Screen
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
